JAR and PostgreSQL fixed

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
-	implementation group: 'mysql', name: 'mysql-connector-java'
+//	implementation group: 'mysql', name: 'mysql-connector-java'
+	implementation group: 'postgresql', name: 'postgresql-connector-java'
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
