--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.username=maciej
 #spring.datasource.password=maciej1234
 #spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database=postgresql
+spring.jpa.database=postgresql
 #spring.datasource.url=${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
 #spring.datasource.password=${JDBC_DATABASE_PASSWORD}
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europ
 spring.datasource.username=maciej
 spring.datasource.password=maciej1234
 
-spring.jpa.database=mysql
+#spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
