--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,16 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
-//	implementation group: 'mysql', name: 'mysql-connector-java'
-	runtimeOnly 'org.postgresql:postgresql'
+	implementation group: 'mysql', name: 'mysql-connector-java'
+//	runtimeOnly 'org.postgresql:postgresql'
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	compile('io.springfox:springfox-swagger2:2.9.2')
+	compile('io.springfox:springfox-swagger-ui:2.9.2')
 
 //	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
