--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
+	testImplementation 'com.google.code.gson:gson'
 
 	implementation group: 'mysql', name: 'mysql-connector-java'
 //	runtimeOnly 'org.postgresql:postgresql'
